# Veresiye

./: .gitignore  Veresiye.code-workspace  pyproject.toml  requirements.dev.txt  requirements.in  requirements.txt  results.jsonl
src/veresiye/: cli.py  interfaces.py  main.py  models.py  parsers.py  processor.py  scanner.py  worker.py
tests/: test_scanner.py
